# sybtcl

./: README
sybtcl-3.0rc2/: CHANGES  COPYRIGHT  INSTALL  Makefile.in  NEW_IN_V3.0  configure  configure.in  pkgIndex.tcl.in
sybtcl-3.0rc2/config/: mkinstalldirs
sybtcl-3.0rc2/doc/: README.doc  sybtcl.html  sybtcl.man  sybtcl.txt
sybtcl-3.0rc2/generic/: sybtcl.c
sybtcl-3.0rc2/generic/ctcompat/: README.ctcompat  dbtoct.c  sybdb.h  syberror.h  sybfront.h
sybtcl-3.0rc2/mac/: README.mac  pkgIndex.tcl  sybtcl.make
sybtcl-3.0rc2/samples/: README.samples  free_space  get_blurbs  pubs.sql  pubs_pix  risqlite  sign_on.tcl  snap_config  sp_who  sybmon  wisqlite
sybtcl-3.0rc2/sybtcl-capi/: Makefile  README.capi  sybtcl-capi.c  sybtcl-capi.h  sybtcl26.c  tcl.h  test.c
sybtcl-3.0rc2/tests/: all  defs  syb01connect.test  syb02use.test  syb03errhandler.test  syb04msghandler.test  syb05sql.test  syb06poll.test  syb07next.test  syb08cols.test  syb09retval.test  syb10money.test  syb11text.test  syb12safe.test  syb13event.test
sybtcl-3.0rc2/unix/: .purify  Makefile.in  configure  configure.in  pkgIndex.tcl.in  sybinit.sed
sybtcl-3.0rc2/win/: README.win  install.tcl  makefile.vc  pkgIndex.tcl
